# zomdroid

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  gradlew.bat  settings.gradle.kts
.github/: FUNDING.yml  workflow-zomdroid.yml
.github/workflows/: android-build.yml  android.yml  build.yml  workflow-zomdroid.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: default_controls.json  default_controls_vkbd.json
app/src/main/assets/wiki/: index.html  index_pt.html  index_ru.html  index_zh.html
app/src/main/cpp/: CMakeLists.txt  InputNativeInterface.cpp  emulation.c  emulation.h  linker.c  logger.h  wrapped_jni.c  wrapped_jni.h  zomdroid.c  zomdroid.h  zomdroid_globals.h  zomdroid_jni.c
app/src/main/cpp/liblinkernsbypass/: android_linker_ns.cpp
app/src/main/java/com/zomdroid/: AppStorage.java  AppStorageProvider.java  C.java  ControlsEditorActivity.java  CrashHandler.java  FileUtils.java  GameActivity.java  GameLauncher.java  InstallerService.java  LauncherActivity.java  LauncherPreferences.java  TaskProgressListener.java  ZipUtils.java  ZomdroidApplication.java
app/src/main/java/com/zomdroid/fragments/: ExportLogFragment.java  GamepadMapperFragment.java  InstallControlsFragment.java  InstallDriverFragment.java  InstallModFragment.java  InstallSavesFragment.java  LauncherFragment.java  ModFixesFragment.java  NewGameInstanceFragment.java  OptimizationFragment.java  SettingsFragment.java  TouchControlsFragment.java  WikiFragment.java
app/src/main/java/com/zomdroid/game/: GameInstance.java  GameInstanceManager.java  GameInstancesManager.java  InstallationPreset.java  PresetManager.java
app/src/main/java/com/zomdroid/input/: AbstractControlElement.java  ButtonControlElement.java  ControlElementDescription.java  DevKey.java  DpadControlElement.java  GLFWBinding.java  GameInputView.java  GamepadManager.java  InputControlsView.java  InputDispatch.java  InputNativeInterface.java  KeyCodes.java  KeyboardManager.java  MouseStickControlElement.java  StickControlElement.java  TextInputOverlayView.java  TouchpadControlElement.java  WasdStickControlElement.java
app/src/main/res/drawable/: header_gradient.xml  ic_github.xml  ic_reddit.xml  ic_void.xml  keyboard_button_bg.xml  keyboard_button_selector.xml  mt_icon_add_2_48.xml  mt_icon_controller.xml  mt_icon_folder_open.xml  mt_icon_nocontroller.xml  mt_icon_play.xml  mt_icon_settings.xml  mt_icon_stack.xml  toolbar_gradient.xml
app/src/main/res/layout/: activity_controls_editor.xml  activity_game.xml  activity_launcher.xml  element_binding_field.xml  fragment_export_log.xml  fragment_gamepad_mapper.xml  fragment_install_controls.xml  fragment_install_driver.xml  fragment_install_mod.xml  fragment_install_saves.xml  fragment_launcher.xml  fragment_mod_fixes.xml  fragment_new_game_instance.xml  fragment_optimization.xml  fragment_settings.xml  fragment_touch_controls.xml  game_instance_item.xml  include_header_gradient.xml  overlay_virtual_keyboard.xml  spinner_dropdown_item.xml  spinner_item.xml  task_progress_dialog.xml
app/src/main/res/menu/: menu_game_instance.xml  menu_launcher.xml  menu_nav.xml  menu_new_game_instance.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  keyboard_styles.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-w600dp/: dimens.xml
app/src/main/res/values-zh-rCN/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
